adapted navbar sizes

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* style: man */
   body#manpage {margin-left: auto}
-  .mp {max-width:100ex;padding:0 9ex 1ex 4ex}
+  .mp {max-width:70%;padding:0 9ex 1ex 4ex}
   .mp p,.mp pre,.mp ul,.mp ol,.mp dl {margin:0 0 20px 0}
   .mp h2 {margin:10px 0 0 0}
   .mp > p,.mp > pre,.mp > ul,.mp > ol,.mp > dl {margin-left:8ex}
@@ -38,7 +38,7 @@
 .ret-button a {display:block;margin:0;padding:0;color:rgb(0, 0, 0);text-decoration:none}
 
 /* style: toc */
-.man-navigation {display:block !important;position:fixed;top:0;left:75%;width:25%;overflow:auto;padding:0;border-left:1px solid #dbdbdb; background: rgb(153, 153, 153);
+.man-navigation {display:block !important;position:fixed;top:0;left:auto;right:0;width:25%;overflow:auto;padding:0;border-left:1px solid #dbdbdb; background: rgb(153, 153, 153);
   font-family:cursive;font-size:14px;line-height:1.42857142857143}
 .man-navigation a,.man-navigation a:hover,.man-navigation a:link,.man-navigation a:visited {display:block;margin:0;padding:5px 20px 5px 30px;color:rgb(0, 0, 0);text-decoration:none}
 .man-navigation a:hover {color:#111;background: #666}
@@ -46,7 +46,8 @@
   .man-navigation {display:none;width: 100%;left:0;margin: 0;height: auto;position: relative;}
   .man-navigation:active {display:block;}
   .man-navigation a {text-align:center; float: none; padding: 15px;margin: 0;}
-  .ret-button {display:inline-block;position: fixed;bottom: 60px;right: 0;}
+  .ret-button {display:inline-block;position: fixed;bottom: 50px;right: 0}
+  .mp {max-width:90%;padding:0 9ex 1ex 4ex}
 }
 
 
