--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* style: man */
-  body#manpage {margin-left: auto}
+  body#manpage {margin-left: 0;margin-top: 0;margin-right: 0}
   .mp {max-width:70%;padding:0 9ex 1ex 4ex}
   .mp p,.mp pre,.mp ul,.mp ol,.mp dl {margin:0 0 20px 0}
   .mp h2 {margin:10px 0 0 0}
@@ -42,14 +42,13 @@
   font-family:cursive;font-size:14px;line-height:1.42857142857143}
 .man-navigation a,.man-navigation a:hover,.man-navigation a:link,.man-navigation a:visited {display:block;margin:0;padding:5px 20px 5px 30px;color:rgb(0, 0, 0);text-decoration:none}
 .man-navigation a:hover {color:#111;background: #666}
-@media screen and (max-width: 900px) {/*wrong condition*/
-  .man-navigation {display:none;width: 100%;left:0;margin: 0;height: auto;position: relative;}
+@media screen and (max-width: 900px) {
+  .man-navigation {display:none;width: 100%;top:0;left:0;right:0;margin:0;height: auto;position: relative;}
   .man-navigation:active {display:block;}
   .man-navigation a {text-align:center; float: none; padding: 15px;margin: 0;}
-  .ret-button {display:inline-block;position: fixed;bottom: 50px;right: 0}
   .mp {max-width:90%;padding:0 9ex 1ex 4ex}
+  .ret-button {display:inline-block;position: fixed;bottom: 50px;right: 0}
 }
-
 
 
 img.logo {
