--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
   .mp {max-width:90%;padding:0 9ex 1ex 4ex}
   .ret-button {display:inline-block;position: fixed;bottom: 50px;right: 0}
 }
-@media only screen {
+@media all and (max-width: 1200px) and (min-width: 800px) {
   .mp,.mp code,.mp pre,.mp tt,.mp kbd,.mp samp,.mp h3,.mp h4 {font-size:7px}
   .mp h2 {font-size:8px;line-height:1.25}
   .mp h1 {font-size:10px;line-height:2}
